changed color to CES_Red

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Givig - Non-profit Free Bootstrap 4 Template by Colorlib</title>
+    <title>UCSD Chinese Engineering Society</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -101,7 +101,7 @@
 
 
 
-  <div class="featured-donate overlay-color" style="background-image: url('images/bg_2.jpg');">
+  <div class="featured-donate overlay-color" style="background-image: url('images/ces_bg.jpg');">
     
     <div class="container">
       <div class="row">
