--- a/gallery.html
+++ b/gallery.html
@@ -68,7 +68,7 @@
   <div class="site-section">
     <div class="container">
       <div class="row no-gutters" id="gallery-content">
-
+        <!-- Please change the js/galleryRender files to change images displayed here -->
       </div>
     </div>
   </div>
