header and minor changes

--- a/about.html
+++ b/about.html
@@ -72,17 +72,18 @@
 			Standing as a multidisciplinary organization of aspiring entrepreneurs and dedicated volunteers, we strive to foster the ethics and creativity upheld in the top engineering schools.
 				<br>
 				<br>
-			By maintaining an expansive network of scholars and professionals from fledgling student engineers, we aim to establish scientists and industry leaders, encourage incubation, communication, development of ideas and practices among those who are actively engaged in this endeavor.
+
 			</blockquote>
            
-			<!--
           </div>
+		  
           <div class="col-md-6">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, necessitatibus officiis facere nisi et, ut adipisci a quis quisquam vitae doloremque tempora repellat quae accusantium atque eum voluptatibus aperiam cumque.</p>
-            <p>Quia ratione, eum harum ab similique mollitia, nisi itaque vel voluptas ipsam dolore perferendis. Deleniti voluptatum error possimus ipsum, sed, obcaecati. Sit unde quia eum repudiandae molestiae reprehenderit harum nesciunt.</p>
+			  <blockquote>
+				By maintaining an expansive network of scholars and professionals from fledgling student engineers, we aim to establish scientists and industry leaders, encourage incubation, communication, development of ideas and practices among those who are actively engaged in this endeavor.
+			  </blockquote>
           </div>
 
-			-->
+			
 			
 
       </div>
@@ -210,11 +211,17 @@
       <div class="row mb-5">
         <div class="col-md-6 col-lg-4">
           <h3 class="heading-section">About Us</h3>
-          <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-          <p><a href="#" class="btn btn-primary px-4 py-3">Join Volunteer</a></p>
+          <p class="mb-5">
+			
+			<blockquote>
+			<strong>Chinese Engineering Society (CES)</strong> is a non-for-profit association dedicated to inspire, nurture, and bring together the next generation of engineers aimed to create positive impacts to our world.
+			</blockquote>
+			
+			</p>
+          <p><a href="#" class="btn btn-primary px-4 py-3">Get in touch</a></p>
         </div>
         <div class="col-md-6 col-lg-4">
-          <h3 class="heading-section">Blog</h3>
+          <h3 class="heading-section">Events</h3>
           <div class="block-21 d-flex mb-4">
             <figure class="mr-3">
               <img src="images/img_1.jpg" alt="" class="img-fluid">
