--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Giving</a>
+      <a class="navbar-brand" href="index.html">Chinese Engineering Society</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="oi oi-menu"></span> Menu
       </button>
@@ -93,7 +93,13 @@
       <div class="row mb-5">
         <div class="col-md-6 col-lg-4">
           <h3 class="heading-section">About Us</h3>
-          <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+          <p class="mb-5">
+			
+			<blockquote>
+			<strong>Chinese Engineering Society (CES)</strong> is a non-for-profit association dedicated to inspire, nurture, and bring together the next generation of engineers aimed to create positive impacts to our world.
+			</blockquote>
+			  
+			</p>
           <p><a href="#" class="btn btn-primary px-4 py-3">Join Volunteer</a></p>
         </div>
         <div class="col-md-6 col-lg-4">
