--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
     
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Giving</a>
+      <a class="navbar-brand" href="index.html">Chinese Engineering Society</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="oi oi-menu"></span> Menu
       </button>
@@ -48,7 +48,7 @@
         <div class="container">
           <div class="row align-items-center justify-content-center">
             <div class="col-md-7 text-center">
-              <h2 class="heading">Blog Posts &amp; News</h2>
+              <h2 class="heading">News And Recent Events</h2>
             </div>
           </div>
         </div>
@@ -61,107 +61,21 @@
   <div class="site-section">
     <div class="container">
       <div class="row">
-        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0">
-          <div class="post-entry mb-5">
-            <a href="blog-single.html" class="mb-3 img-wrap">
-              <img src="images/img_4.jpg" alt="Image placeholder" class="img-fluid">
-              <span class="date">July 26, 2018</span>
-            </a>
-            <h3><a href="blog-single.html">Be A Volunteer Today</a></h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-            <p><a href="blog-single.html">Read More</a></p>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0">
-          <div class="post-entry mb-5">
-            <a href="blog-single.html" class="mb-3 img-wrap">
-              <img src="images/img_5.jpg" alt="Image placeholder" class="img-fluid">
-              <span class="date">July 26, 2018</span>
-            </a>
-            <h3><a href="blog-single.html">You May Save The Life of A Child</a></h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-            <p><a href="blog-single.html">Read More</a></p>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0">
-          <div class="post-entry mb-5">
-            <a href="blog-single.html" class="mb-3 img-wrap">
-              <img src="images/img_6.jpg" alt="Image placeholder" class="img-fluid">
-              <span class="date">July 26, 2018</span>
-            </a>
-            <h3><a href="blog-single.html">Children That Needs Care</a></h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-            <p><a href="blog-single.html">Read More</a></p>
-          </div>
-        </div>
 
         <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0">
           <div class="post-entry mb-5">
             <a href="blog-single.html" class="mb-3 img-wrap">
-              <img src="images/img_4.jpg" alt="Image placeholder" class="img-fluid">
+              <img src="images/bg_2.jpg" alt="Image placeholder" class="img-fluid">
               <span class="date">July 26, 2018</span>
             </a>
-            <h3><a href="blog-single.html">Be A Volunteer Today</a></h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-            <p><a href="blog-single.html">Read More</a></p>
+            <h3><a href="blog-single.html">Event or Blog title</a></h3>
+            <p>Event content.</p>
+            <p><a href="blog-single.html">Read More</a></p> 
+			  <!--Here link to event side-->
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0">
-          <div class="post-entry mb-5">
-            <a href="blog-single.html" class="mb-3 img-wrap">
-              <img src="images/img_5.jpg" alt="Image placeholder" class="img-fluid">
-              <span class="date">July 26, 2018</span>
-            </a>
-            <h3><a href="blog-single.html">You May Save The Life of A Child</a></h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-            <p><a href="blog-single.html">Read More</a></p>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0">
-          <div class="post-entry mb-5">
-            <a href="blog-single.html" class="mb-3 img-wrap">
-              <img src="images/img_6.jpg" alt="Image placeholder" class="img-fluid">
-              <span class="date">July 26, 2018</span>
-            </a>
-            <h3><a href="blog-single.html">Children That Needs Care</a></h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-            <p><a href="blog-single.html">Read More</a></p>
-          </div>
-        </div>
+	  		
 
-        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0">
-          <div class="post-entry mb-5">
-            <a href="blog-single.html" class="mb-3 img-wrap">
-              <img src="images/img_4.jpg" alt="Image placeholder" class="img-fluid">
-              <span class="date">July 26, 2018</span>
-            </a>
-            <h3><a href="blog-single.html">Be A Volunteer Today</a></h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-            <p><a href="blog-single.html">Read More</a></p>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0">
-          <div class="post-entry mb-5">
-            <a href="blog-single.html" class="mb-3 img-wrap">
-              <img src="images/img_5.jpg" alt="Image placeholder" class="img-fluid">
-              <span class="date">July 26, 2018</span>
-            </a>
-            <h3><a href="blog-single.html">You May Save The Life of A Child</a></h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-            <p><a href="blog-single.html">Read More</a></p>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0">
-          <div class="post-entry mb-5">
-            <a href="blog-single.html" class="mb-3 img-wrap">
-              <img src="images/img_6.jpg" alt="Image placeholder" class="img-fluid">
-              <span class="date">July 26, 2018</span>
-            </a>
-            <h3><a href="blog-single.html">Children That Needs Care</a></h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-            <p><a href="blog-single.html">Read More</a></p>
-          </div>
-        </div>
       </div>
     </div>
   </div> <!-- .site-section -->
@@ -171,7 +85,13 @@
       <div class="row mb-5">
         <div class="col-md-6 col-lg-4">
           <h3 class="heading-section">About Us</h3>
-          <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+          <p class="mb-5">
+			
+			<blockquote>
+			<strong>Chinese Engineering Society (CES)</strong> is a non-for-profit association dedicated to inspire, nurture, and bring together the next generation of engineers aimed to create positive impacts to our world.
+			</blockquote>
+			
+			</p>
           <p><a href="#" class="btn btn-primary px-4 py-3">Join Volunteer</a></p>
         </div>
         <div class="col-md-6 col-lg-4">
