--- a/gallery.html
+++ b/gallery.html
@@ -26,19 +26,17 @@
 
 <body onload="renderGallery()">
 
-  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light"
-    id="ftco-navbar">
+  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Giving</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
-        aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="index.html">Chinese Engineering Society</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="oi oi-menu"></span> Menu
       </button>
 
       <div class="collapse navbar-collapse" id="ftco-nav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="donate.html" class="nav-link">Donate</a></li>
+          <li class="nav-item"><a href="members.html" class="nav-link">Members</a></li>
           <li class="nav-item active"><a href="gallery.html" class="nav-link">Gallery</a></li>
           <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
           <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
@@ -48,6 +46,7 @@
     </div>
   </nav>
   <!-- END nav -->
+  
 
   <div class="block-31" style="position: relative;">
     <div class="owl-carousel loop-block-31 ">
@@ -56,7 +55,7 @@
         <div class="container">
           <div class="row align-items-center justify-content-center">
             <div class="col-md-7 text-center">
-              <h2 class="heading">Gallery That Worth A Thousand Word</h2>
+              <h2 class="heading">Gallary</h2>
             </div>
           </div>
         </div>
@@ -73,6 +72,8 @@
     </div>
   </div>
 
+	<!--
+	
   <div class="site-section">
     <div class="container">
       <div class="row">
@@ -115,7 +116,9 @@
 
       </div>
     </div>
-  </div> <!-- .site-section -->
+  </div> 
+	
+	-->
 
   <footer class="footer">
     <div class="container">
