Member info error correction

--- a/members.html
+++ b/members.html
@@ -401,8 +401,8 @@
               <span class="time d-block mb-3">Junior | Math-Computer Science</span>
 
               <div class="donate-amount d-flex">
-                <div class="label">DAD Training Lead</div>
-                <div class="amount">DAD</div>
+                <div class="label">Member</div>
+                <div class="amount">CDP</div>
               </div>
             </div>
           </div>    
