--- a/public/gallery.html
+++ b/public/gallery.html
@@ -55,7 +55,7 @@
         <div class="container">
           <div class="row align-items-center justify-content-center">
             <div class="col-md-7 text-center">
-              <h2 class="heading" style = "font-family: 'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, 'sans-serif';">Gallary</h2>
+              <h2 class="heading" style = "font-family: 'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, 'sans-serif';">Gallery</h2>
             </div>
           </div>
         </div>
