--- a/public/members.html
+++ b/public/members.html
@@ -691,7 +691,7 @@
 <!--            <img src="images/person_1.jpg" alt="Image placeholder" class="img-fluid">-->
             <div class="donate-info">
               <h2>Zhiyuan Chen</h2>
-              <span class="time d-block mb-3">Former president of Chinese Engineering Society</span>
+              <span class="time d-block mb-3">Former president of CES</span>
 
               <div class="donate-amount-long d-flex">
                 <div class="label"></div>
@@ -719,7 +719,7 @@
 <!--            <img src="images/person_2.jpg" alt="Image placeholder" class="img-fluid">-->
             <div class="donate-info">
               <h2>Zhizhen Qin</h2>
-              <span class="time d-block mb-3">Former President of Chinese Engineering Society</span>
+              <span class="time d-block mb-3">Former President of CES</span>
 
               <div class="donate-amount-long d-flex">
                 <div class="label"></div>
