--- a/public/members.html
+++ b/public/members.html
@@ -195,7 +195,7 @@
 		  
 		  <div class="col-md-6 col-lg-4 mb-5">
           <div class="person-donate text-center bg-light pt-4">
-<!--            <img src="images/person_2.jpg" alt="Image placeholder" class="img-fluid">-->
+            <img src="images/Profile 1.jpg" alt="Image placeholder" class="img-fluid">
             <div class="donate-info">
               <h2>Guo Chen</h2>
               <span class="time d-block mb-3">Lead of Internal Affairs (IA)</span>
@@ -822,7 +822,7 @@
           <p class="mb-3">Chinese Engineering Society (CES) is a non-for-profit association dedicated to inspire, nurture, and bring together the next generation of engineers aimed to create positive impacts to our world.</p>
           <span class="fund-raised d-block mb-5"><!--Can have something else in here--></span>
 
-          <p><a href="#" class="btn btn-success btn-hover-white py-3 px-5">Read The Full Story</a></p>
+          <p><a href="#" target="_blank" class="btn btn-success btn-hover-white py-3 px-5">Read The Full Story</a></p>
         </div>
         
       </div>
