--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
   
   <div class="block-31" style="position: relative;">
     <div class="owl-carousel loop-block-31 ">
-      <div class="block-30 item" style="background-image: url('images/bg_1.jpg');" data-stellar-background-ratio="0.5">
+      <div class="block-30 item" style="background-image: url('images/bg_12.jpg');" data-stellar-background-ratio="0.5">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-7">
@@ -165,7 +165,7 @@
 		</div>
 			  
 		<div class="card fundraise-item">
-		  <a href="content/Resume Guidelines.pdf"><img class="card-img-top" src="images/GRE workshop.jpg" alt="Image placeholder"></a>
+		  <a href="content/Resume Guidelines.pdf"><img class="card-img-top" src="images/CDP.jpg" alt="Image placeholder"></a>
 		  <div class="card-body">
 			<h3 class="card-title"><a href="https://mp.weixin.qq.com/s/F03OnT4tQCU1bU0-C8KC9g">Career Development Symposium</a></h3>
 			<p class="card-text">A career development event targeting DSC and CSE majors</p>
@@ -173,7 +173,7 @@
 		</div>
 		
 	   <div class="card fundraise-item">
-		  <a href="content/Resume Guidelines.pdf"><img class="card-img-top" src="images/Profile Building.jpg" alt="Image placeholder"></a>
+		  <a href="content/Resume Guidelines.pdf"><img class="card-img-top" src="images/Profile Building.JPG" alt="Image placeholder"></a>
 		  <div class="card-body">
 			<h3 class="card-title"><a href="https://docs.google.com/forms/d/e/1FAIpQLSdX8bym3d-OvjB3TxbcAIJUGuVtMbeHRzupbgcqTb7SjibYHA/viewform?usp=sf_link">Professional Profile Building</a></h3>
 			<p class="card-text">A resume critique and interview prep event open to all international students</p>
