--- a/public/members.html
+++ b/public/members.html
@@ -199,7 +199,7 @@
 <!--            <img src="images/person_2.jpg" alt="Image placeholder" class="img-fluid">-->
             <div class="donate-info">
               <h2>Yueqing Qiao</h2>
-              <span class="time d-block mb-3">Vice President of Media</span>
+              <span class="time d-block mb-3">Lead of Media Department</span>
 
               <div class="donate-amount d-flex">
                 <div class="label">Lead</div>
@@ -436,21 +436,6 @@
 
               <div class="donate-amount d-flex">
                 <div class="label">Member</div>
-                <div class="amount">DAD</div>
-              </div>
-            </div>
-          </div>    
-        </div>
-		  
-		  <div class="col-md-6 col-lg-4 mb-5">
-          <div class="person-donate text-center bg-light pt-4">
-<!--            <img src="images/person_2.jpg" alt="Image placeholder" class="img-fluid">-->
-            <div class="donate-info">
-              <h2>Yueqing Qiao</h2>
-              <span class="time d-block mb-3">Sophomore | Bioinformatics</span>
-
-              <div class="donate-amount d-flex">
-                <div class="label">Media Specialist</div>
                 <div class="amount">DAD</div>
               </div>
             </div>
