--- a/public/events.html
+++ b/public/events.html
@@ -34,20 +34,23 @@
           <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
           <li class="nav-item"><a href="members.html" class="nav-link">Members</a></li>
           <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-          <li class="nav-item"><a href="events.html" class="nav-link">Events</a></li>
-          <li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
+          <li class="nav-item active"><a href="events.html" class="nav-link">Events</a></li>
+          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
           <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
         </ul>
       </div>
     </div>
   </nav>
+  <!-- END nav -->
+  
+  
   <div class="block-31" style="position: relative;">
     <div class="owl-carousel loop-block-31 ">
-      <div class="block-30 block-30-sm item" style="background-image: url('images/group_meeting.jpg');" data-stellar-background-ratio="0.5">
+      <div class="block-30 block-30-sm item" style="background-image: url('images/bg_3.jpg');" data-stellar-background-ratio="0.5">
         <div class="container">
           <div class="row align-items-center justify-content-center">
             <div class="col-md-7 text-center">
-              <h2 class="heading" style = "font-family: 'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, 'sans-serif';">Let the world hear the voice of Chinese Engineers</h2>
+              <h2 class="heading" style = "font-family: 'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, 'sans-serif';">News And Recent Events</h2>
             </div>
           </div>
         </div>
@@ -56,51 +59,32 @@
     </div>
   </div>
   
-  <div class="site-section mb-5">
-    <div class="container">
-      <div class="row mb-5">
-        <div class="col-md-12 mb-5">
-          <img src="images/family2020.jpg" alt="Image placeholder" class="img-fluid">
-			<img src="images/ces_bg.jpg" alt="Image placeholder" class="img-fluid">
-        </div>
-        <div class="col-md-6">
-			
-            <blockquote>
-			<strong>Chinese Engineering Society (CES)</strong> is a non-for-profit association dedicated to inspire, nurture, and bring together the next generation of engineers aimed to create positive impacts to our world.
-				<br>
-				<br>
-			Standing as a multidisciplinary organization of aspiring entrepreneurs and dedicated volunteers, we strive to foster the ethics and creativity upheld in the top engineering schools.
-				<br>
-				<br>
-
-			</blockquote>
-           
-          </div>
-		  
-          <div class="col-md-6">
-			  <blockquote>
-				By maintaining an expansive network of scholars and professionals from fledgling student engineers, we aim to establish scientists and industry leaders, encourage incubation, communication, development of ideas and practices among those who are actively engaged in this endeavor.
-			  </blockquote>
-          </div>
-
-			
-			
-
-      </div>
-</div>
-  </div>
-
+  
   <div class="site-section">
     <div class="container">
-      <div class="block-31 mb-5" style="position: relative;">
-          <div class="owl-carousel loop-block-31">
-            <div class="block-30 no-overlay item" style="background-image: url('images/bg_2.jpg');"></div>
-            <div class="block-30 no-overlay item" style="background-image: url('images/bg_1.jpg');"></div>
+      <div class="row">
+
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0">
+          <div class="post-entry mb-5">
+<iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2FCESUCSD%2Fposts%2F1378469058993032&width=500" width="500" height="281" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
           </div>
         </div>
+      </div>
+		
+		      <div class="row">
+
+        <div class="col-12 col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0">
+          <div class="post-entry mb-5">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/oICw6F0j3mA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+		
+		
     </div>
-  </div>
-  <footer class="footer">
+  </div> <!-- .site-section -->
+  
+    <footer class="footer">
     <div class="container">
   
       <div class="row pt-1">
@@ -115,6 +99,8 @@
       </div>
     </div>
   </footer>
+
+  <!-- loader -->
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
 
