Fixed typo in image names

--- a/public/index.html
+++ b/public/index.html
@@ -174,7 +174,7 @@
 		</div>
 		
 	   <div class="card fundraise-item">
-		  <a href="content/Resume Guidelines.pdf" target="_blank"><img class="card-img-top" src="images/Profile Building.JPG" alt="Image placeholder"></a>
+		  <a href="content/Resume Guidelines.pdf" target="_blank"><img class="card-img-top" src="images/Profile Building.jpg" alt="Image placeholder"></a>
 		  <div class="card-body">
 			<h3 class="card-title"><a href="https://docs.google.com/forms/d/e/1FAIpQLSdX8bym3d-OvjB3TxbcAIJUGuVtMbeHRzupbgcqTb7SjibYHA/viewform?usp=sf_link" target="_blank">Professional Profile Building</a></h3>
 			<p class="card-text">A resume critique and interview prep event open to all international students</p>
