--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
           <span class="featured-text mb-3 d-block">CES 2020</span>
           <h2>2020 CES Crews</h2>
           <p class="mb-3">Concurrently, CES is consisted of not only UCSD juniors, sophomores and freshmans who excel in their studies, but also senior graduates who are already admitted by prestigous schools such as Columbia University, UC Berkeley and so on. </p>
-          <span class="donation-time mb-3">CES Alumini landed in top 30 American Graduate Institudes</span>
+          <span class="donation-time mb-3">CES Alumini landed in top 30 American Graduate Institute</span>
           <div class="progress custom-progress">
             <div class="progress-bar bg-warning" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
