--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
             <div class="media-body">
               <h3 class="heading">Grad School Application Roundtables</h3>
               <p>A roundtable dinner party that gathers some of the most intelligent senior UCSD graduates who are about to persue their graduate school degrees.</p>
-              <p><a href="#">Learn More</a></p>
+              <p><a href="#Grad School app">Learn More</a></p>
             </div>
           </div>  
         </div>
@@ -120,7 +120,7 @@
             <div class="progress-bar bg-warning" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
           
-          <p><a href="#" target="_blank" class="btn btn-primary btn-hover-white py-3 px-5">Connect with CES today</a></p>
+          <p><a href="contact.html" target="_blank" class="btn btn-primary btn-hover-white py-3 px-5">Connect with CES today</a></p>
         </div>
         
       </div>
@@ -184,7 +184,7 @@
 	    <div class="card fundraise-item">
 		  <a href="#" ><img class="card-img-top" src="images/grad_roundtable.jpg" alt="Image placeholder"></a>
 		  <div class="card-body">
-			<h3 class="card-title"><a href="#" >Grad School Application Roundtables</a></h3>
+			<h3 class="card-title"><a href="#" id="Grad School app" >Grad School Application Roundtables</a></h3>
 			<p class="card-text">A roundtable dinner party that gathers some of the most intelligent senior UCSD graduates who are about to persue their graduate school degrees.</p>
 		  </div>
 		</div>
