Added footer icons

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css"> -->
+    <!-- <script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script> -->
   </head>
   <body>
     
@@ -210,11 +212,11 @@
 
         <div class="col-md-6 pl-md-5">
           <span class="featured-text d-block mb-3">Next Generation Leadership</span>
-          <h2>2019 CES Leader Board</h2>
+          <h2>2020 CES Leader Board</h2>
           <p class="mb-3">More content to be filled up with.</p>
           <span class="fund-raised d-block mb-5">We strive to be better...</span>
 
-          <p><a href="/members.html" target="_blank" class="btn btn-success btn-hover-white py-3 px-5">Know more about us</a></p>
+          <p><a href="members.html" class="btn btn-success btn-hover-white py-3 px-5">Know more about us</a></p>
         </div>
         
       </div>
@@ -224,6 +226,46 @@
 
   
   <footer class="footer">
+
+      <div id="footer_icon_container">
+          <div class="homepage_footer_icons" onclick="window.open('mailto:wag001@ucsd.edu')">
+            <div id="homepage_footer_widget_mail" class="homepage_footer_widgets">
+            </div>
+          </div>
+          <div class="homepage_footer_icons" onclick="window.open ('https://github.com/Broccolito/CES_Official_Website')">
+            <div id="homepage_footer_widget_github" class="homepage_footer_widgets">
+            </div>
+          </div>
+  
+          <div class="homepage_footer_icons" onmouseover="showImg('wechat')" onmouseout="hideImg('wechat')">
+  
+            <div id="homepage_footer_widget_wechat" class="homepage_footer_widgets">
+              <img id="wechat" src="images/wechatQR.jpg" style="opacity: 1; z-index: 1;">
+            </div>
+  
+          </div>
+
+          <div class="homepage_footer_icons" onclick="window.open ('https://www.facebook.com/CESUCSD/')">
+            <div id="homepage_footer_widget_facebook" class="homepage_footer_widgets">
+            </div>
+          </div>  
+          <!-- <div class="homepage_footer_icons" onclick="window.open('https://www.linkedin.com/company/')">
+            <div id="homepage_footer_widget_linkedin" class="homepage_footer_widgets">
+            </div>
+          </div> -->
+ 
+          <div class="homepage_footer_icons" onclick="window.open('https://www.instagram.com/ucsdces/')">
+            <div id="homepage_footer_widget_instagram" class="homepage_footer_widgets">
+            </div>
+          </div>
+
+          <!-- <div class="homepage_footer_icons" onclick="window.open('html/Sponsor.html')">
+            <div id="homepage_footer_widget_sponsor" class="homepage_footer_widgets">
+              <img id='sponsor' src="/assets/Images/hezuowoshou.png">
+            </div>
+          </div> -->
+        </div>
+
     <div class="container">
   
       <div class="row pt-1">
