--- a/public/about.html
+++ b/public/about.html
@@ -90,7 +90,7 @@
 </div>
   </div>
 
-  <div class="site-section">
+  <div class="site-section" style="margin-bottom: 200px;">
     <div class="container">
       <div class="block-31 mb-5" style="position: relative;">
           <div class="owl-carousel loop-block-31">
@@ -100,7 +100,48 @@
         </div>
     </div>
   </div>
+
   <footer class="footer">
+      <div id="footer_icon_container">
+          <div class="homepage_footer_icons" onclick="window.open('mailto:wag001@ucsd.edu')">
+            <div id="homepage_footer_widget_mail" class="homepage_footer_widgets">
+            </div>
+          </div>
+          <div class="homepage_footer_icons" onclick="window.open ('https://github.com/Broccolito/CES_Official_Website')">
+            <div id="homepage_footer_widget_github" class="homepage_footer_widgets">
+            </div>
+          </div>
+  
+          <div class="homepage_footer_icons" onmouseover="showImg('wechat')" onmouseout="hideImg('wechat')">
+  
+            <div id="homepage_footer_widget_wechat" class="homepage_footer_widgets">
+              <img id="wechat" src="images/wechatQR.jpg" style="opacity: 1; z-index: 1;">
+            </div>
+  
+          </div>
+
+          <div class="homepage_footer_icons" onclick="window.open ('https://www.facebook.com/CESUCSD/')">
+            <div id="homepage_footer_widget_facebook" class="homepage_footer_widgets">
+            </div>
+          </div>  
+          <!-- <div class="homepage_footer_icons" onclick="window.open('https://www.linkedin.com/company/')">
+            <div id="homepage_footer_widget_linkedin" class="homepage_footer_widgets">
+            </div>
+          </div> -->
+ 
+          <div class="homepage_footer_icons" onclick="window.open('https://www.instagram.com/ucsdces/')">
+            <div id="homepage_footer_widget_instagram" class="homepage_footer_widgets">
+            </div>
+          </div>
+
+          <!-- <div class="homepage_footer_icons" onclick="window.open('html/Sponsor.html')">
+            <div id="homepage_footer_widget_sponsor" class="homepage_footer_widgets">
+              <img id='sponsor' src="/assets/Images/hezuowoshou.png">
+            </div>
+          </div> -->
+        </div>
+
+
     <div class="container">
   
       <div class="row pt-1">
