--- a/public/members.html
+++ b/public/members.html
@@ -658,7 +658,7 @@
 		 
 		  <div class="col-md-6 col-lg-4 mb-5">
           <div class="person-donate text-center bg-light pt-4">
-<!--            <img src="images/person_2.jpg" alt="Image placeholder" class="img-fluid">-->
+           <!-- <img src="images/person_2.jpg" alt="Image placeholder" class="img-fluid"> -->
             <div class="donate-info">
               <h2>Yueqian Ma</h2>
               <span class="time d-block mb-3">Junior | Computer Science</span>
@@ -908,7 +908,46 @@
   </div>
 -->
 	  
-	    <footer class="footer">
+	<footer class="footer">
+      <div id="footer_icon_container">
+          <div class="homepage_footer_icons" onclick="window.open('mailto:wag001@ucsd.edu')">
+            <div id="homepage_footer_widget_mail" class="homepage_footer_widgets">
+            </div>
+          </div>
+          <div class="homepage_footer_icons" onclick="window.open ('https://github.com/Broccolito/CES_Official_Website')">
+            <div id="homepage_footer_widget_github" class="homepage_footer_widgets">
+            </div>
+          </div>
+  
+          <div class="homepage_footer_icons" onmouseover="showImg('wechat')" onmouseout="hideImg('wechat')">
+  
+            <div id="homepage_footer_widget_wechat" class="homepage_footer_widgets">
+              <img id="wechat" src="images/wechatQR.jpg" style="opacity: 1; z-index: 1;">
+            </div>
+  
+          </div>
+
+          <div class="homepage_footer_icons" onclick="window.open ('https://www.facebook.com/CESUCSD/')">
+            <div id="homepage_footer_widget_facebook" class="homepage_footer_widgets">
+            </div>
+          </div>  
+          <!-- <div class="homepage_footer_icons" onclick="window.open('https://www.linkedin.com/company/')">
+            <div id="homepage_footer_widget_linkedin" class="homepage_footer_widgets">
+            </div>
+          </div> -->
+ 
+          <div class="homepage_footer_icons" onclick="window.open('https://www.instagram.com/ucsdces/')">
+            <div id="homepage_footer_widget_instagram" class="homepage_footer_widgets">
+            </div>
+          </div>
+
+          <!-- <div class="homepage_footer_icons" onclick="window.open('html/Sponsor.html')">
+            <div id="homepage_footer_widget_sponsor" class="homepage_footer_widgets">
+              <img id='sponsor' src="/assets/Images/hezuowoshou.png">
+            </div>
+          </div> -->
+        </div>
+
     <div class="container">
   
       <div class="row pt-1">
