Footer icon wechatQR code update

--- a/public/about.html
+++ b/public/about.html
@@ -115,7 +115,7 @@
           <div class="homepage_footer_icons" onmouseover="showImg('wechat')" onmouseout="hideImg('wechat')">
   
             <div id="homepage_footer_widget_wechat" class="homepage_footer_widgets">
-              <img id="wechat" src="images/wechatQR.jpg" style="opacity: 1; z-index: 1;">
+              <img id="wechat" src="images/wechatQR2.jpg" style="opacity: 1; z-index: 1;">
             </div>
   
           </div>
