--- a/public/about.html
+++ b/public/about.html
@@ -66,7 +66,7 @@
         <div class="col-md-6">
 			
             <blockquote>
-			<strong>Chinese Engineering Society (CES)</strong> is a non-for-profit association dedicated to inspire, nurture, and bring together the next generation of engineers aimed to create positive impacts to our world.
+			<strong>Chinese Engineering Society (CES)</strong> is a not-for-profit association dedicated to inspire, nurture, and bring together the next generation of engineers aimed to create positive impacts to our world.
 				<br>
 				<br>
 			Standing as a multidisciplinary organization of aspiring entrepreneurs and dedicated volunteers, we strive to foster the ethics and creativity upheld in the top engineering schools.
