Faster initial render time on Chrome 85 on select pages

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -67,7 +67,7 @@
 
   <div class="site-section">
     <div class="container">
-      <div class="row no-gutters" id="gallery-content">
+      <div class="row no-gutters" id="gallery-content" style="content-visibility: auto;">
         <!-- Please change the js/galleryRender files to change images displayed here -->
       </div>
     </div>
