--- a/public/about.html
+++ b/public/about.html
@@ -93,7 +93,7 @@
   <div class="site-section" style="margin-bottom: 200px;">
     <div class="container">
       <div class="block-31 mb-5" style="position: relative;">
-          <div class="owl-carousel loop-block-31">
+          <div class="owl-carousel loop-block-31" style="content-visibility: auto;">
             <div class="block-30 no-overlay item" style="background-image: url('images/bg_2.jpg');"></div>
             <div class="block-30 no-overlay item" style="background-image: url('images/bg_1.jpg');"></div>
           </div>
@@ -172,8 +172,8 @@
   
   <script src="js/aos.js"></script>
   <script src="js/jquery.animateNumber.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="js/google-map.js"></script>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script> -->
+  <!-- <script src="js/google-map.js"></script> -->
   <script src="js/main.js"></script>
     
   </body>
