--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>UCSD Chinese Engineering Society</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+    <meta name="Description" content="Chinese Engineering Society (CES) is a not-for-profit association dedicated to inspire, nurture, and bring together the next generation of engineers aimed to create positive impacts in our world.">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500|Ubuntu:700" rel="stylesheet">
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -73,7 +73,7 @@
             <div class="media-body">
               <h3 class="heading">Inspiration Talk</h3>
               <p>An engineeing version of TEDx in UCSD hosted by CES. The best way to learn about frontier science and obtain connections with professors.</p>
-              <p><a href="https://www.google.com">Learn More</a></p>
+              <p><a href=#>Learn More</a></p>
             </div>
           </div>     
         </div>
@@ -298,8 +298,8 @@
   
   <script src="js/aos.js"></script>
   <script src="js/jquery.animateNumber.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="js/google-map.js"></script>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script> -->
+  <!-- <script src="js/google-map.js"></script> -->
   <script src="js/main.js"></script>
     
   </body>
