紧急错误链接修复

--- a/public/members.html
+++ b/public/members.html
@@ -839,7 +839,7 @@
           <p class="mb-3">Chinese Engineering Society (CES) is a non-for-profit association dedicated to inspire, nurture, and bring together the next generation of engineers aimed to create positive impacts to our world.</p>
           <span class="fund-raised d-block mb-5"><!--Can have something else in here--></span>
 
-          <p><a href="#" target="_blank" class="btn btn-success btn-hover-white py-3 px-5">Read The Full Story</a></p>
+          <p><a href="about.html" class="btn btn-success btn-hover-white py-3 px-5">Read The Full Story</a></p>
         </div>
         
       </div>
