--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
             <div class="media-body">
               <h3 class="heading">Inspiration Talk</h3>
               <p>An engineeing version of TEDx in UCSD hosted by CES. The best way to learn about frontier science and obtain connections with professors.</p>
-              <p><a href=#>Learn More</a></p>
+              <!-- <p><a href=#>Learn More</a></p> -->
             </div>
           </div>     
         </div>
@@ -84,7 +84,7 @@
             <div class="media-body">
               <h3 class="heading">Grad School Application Roundtables</h3>
               <p>A roundtable dinner party that gathers some of the most intelligent senior UCSD graduates who are about to persue their graduate school degrees.</p>
-              <p><a href="#Grad School app">Learn More</a></p>
+              <!-- <p><a href="#Grad School app">Learn More</a></p> -->
             </div>
           </div>  
         </div>
@@ -95,7 +95,7 @@
             <div class="media-body">
               <h3 class="heading">Join us and change the world</h3>
               <p>If you consider yourself as a passionate, ambitous and innovate indivisual who is currently persuing a degress in Science and Engineering, come, join us and let CES redefine your world.</p>
-              <p><a href="#">Learn More</a></p>
+              <!-- <p><a href="#">Learn More</a></p> -->
             </div>
           </div> 
         </div>
@@ -213,7 +213,7 @@
         <div class="col-md-6 pl-md-5">
           <span class="featured-text d-block mb-3">Next Generation Leadership</span>
           <h2>2020 CES Leader Board</h2>
-          <p class="mb-3">More content to be filled up with.</p>
+          <!-- <p class="mb-3">More content to be filled up with.</p> -->
           <span class="fund-raised d-block mb-5">We strive to be better...</span>
 
           <p><a href="members.html" class="btn btn-success btn-hover-white py-3 px-5">Know more about us</a></p>
