--- a/public/404.html
+++ b/public/404.html
@@ -150,43 +150,43 @@
   
    <footer class="footer">
       <div id="footer_icon_container">
-          <div class="homepage_footer_icons" onclick="window.open('mailto:wag001@ucsd.edu')">
-            <div id="homepage_footer_widget_mail" class="homepage_footer_widgets">
-            </div>
+        <div class="homepage_footer_icons mail_white_icon" onclick="window.open('mailto:wag001@ucsd.edu')">
+          <div id="homepage_footer_widget_mail" class="homepage_footer_widgets">
           </div>
-          <div class="homepage_footer_icons" onclick="window.open ('https://github.com/Broccolito/CES_Official_Website')">
-            <div id="homepage_footer_widget_github" class="homepage_footer_widgets">
-            </div>
-          </div>
-  
-          <div class="homepage_footer_icons" onmouseover="showImg('wechat')" onmouseout="hideImg('wechat')">
-  
-            <div id="homepage_footer_widget_wechat" class="homepage_footer_widgets">
-              <img id="wechat" src="images/wechatQR2.jpg" style="opacity: 1; z-index: 1;">
-            </div>
-  
-          </div>
-
-          <div class="homepage_footer_icons" onclick="window.open ('https://www.facebook.com/CESUCSD/')">
-            <div id="homepage_footer_widget_facebook" class="homepage_footer_widgets">
-            </div>
-          </div>  
-          <!-- <div class="homepage_footer_icons" onclick="window.open('https://www.linkedin.com/company/')">
-            <div id="homepage_footer_widget_linkedin" class="homepage_footer_widgets">
-            </div>
-          </div> -->
- 
-          <div class="homepage_footer_icons" onclick="window.open('https://www.instagram.com/ucsdces/')">
-            <div id="homepage_footer_widget_instagram" class="homepage_footer_widgets">
-            </div>
-          </div>
-
-          <!-- <div class="homepage_footer_icons" onclick="window.open('html/Sponsor.html')">
-            <div id="homepage_footer_widget_sponsor" class="homepage_footer_widgets">
-              <img id='sponsor' src="/assets/Images/hezuowoshou.png">
-            </div>
-          </div> -->
         </div>
+        <div class="homepage_footer_icons github_black_icon" onclick="window.open ('https://github.com/Broccolito/CES_Official_Website')">
+          <div id="homepage_footer_widget_github" class="homepage_footer_widgets">
+          </div>
+        </div>
+
+        <div class="homepage_footer_icons green_icon" onmouseover="showImg('wechat')" onmouseout="hideImg('wechat')">
+
+          <div id="homepage_footer_widget_wechat" class="homepage_footer_widgets">
+            <img id="wechat" src="images/wechatQR2.jpg" style="opacity: 1; z-index: 1;">
+          </div>
+
+        </div>
+
+        <div class="homepage_footer_icons facebook_blue_icon" onclick="window.open ('https://www.facebook.com/CESUCSD/')">
+          <div id="homepage_footer_widget_facebook" class="homepage_footer_widgets">
+          </div>
+        </div>  
+        <!-- <div class="homepage_footer_icons" onclick="window.open('https://www.linkedin.com/company/')">
+          <div id="homepage_footer_widget_linkedin" class="homepage_footer_widgets">
+          </div>
+        </div> -->
+
+        <div class="homepage_footer_icons" onclick="window.open('https://www.instagram.com/ucsdces/')">
+          <div id="homepage_footer_widget_instagram" class="homepage_footer_widgets">
+          </div>
+        </div>
+
+        <!-- <div class="homepage_footer_icons" onclick="window.open('html/Sponsor.html')">
+          <div id="homepage_footer_widget_sponsor" class="homepage_footer_widgets">
+            <img id='sponsor' src="/assets/Images/hezuowoshou.png">
+          </div>
+        </div> -->
+      </div>
 
 
     <div class="container">
