Footer message style change

--- a/public/members.html
+++ b/public/members.html
@@ -953,10 +953,11 @@
       <div class="row pt-1">
         <div class="col-md-12 text-center">
           <p>
-
-			This Website is made and maintained by Chinese Engineering Society <br> 
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" class="text-primary">Colorlib</a>
-
+              This Website is made and maintained by Chinese Engineering Society <br>
+              Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved.
+              <div style="opacity: 0.3;" >
+                This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" class="text-primary">Colorlib</a>
+              </div>
           </p>
         </div>
       </div>
