--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
             <div class="media-body">
               <h3 class="heading">Inspiration Talk</h3>
               <p>An engineeing version of TEDx in UCSD hosted by CES. The best way to learn about frontier science and obtain connections with professors.</p>
-              <!-- <p><a href=#>Learn More</a></p> -->
+              <p><a href=#>Learn More</a></p>
             </div>
           </div>     
         </div>
@@ -254,7 +254,7 @@
             </div>
           </div> -->
  
-          <div class="homepage_footer_icons" onclick="window.open('https://www.instagram.com/ucsdces/')">
+          <div class="homepage_footer_icons ins_pink_icon" onclick="window.open('https://www.instagram.com/ucsdces/')">
             <div id="homepage_footer_widget_instagram" class="homepage_footer_widgets">
             </div>
           </div>
@@ -303,5 +303,16 @@
   <!-- <script src="js/google-map.js"></script> -->
   <script src="js/main.js"></script>
     
+  <script>
+      function showImg(id) {
+        document.getElementById(id).style.opacity = 1;
+        document.getElementById(id).style.zIndex = "1";
+      }
+      function hideImg(id) {
+        document.getElementById(id).style.opacity = 0;
+        document.getElementById(id).style.zIndex = "-1";
+      }
+  </script>
+
   </body>
 </html>
