移动端体验优化(button alighment, recent events' arrow placement, smooth scrolling, smaller WeChat QR code)

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
             <div class="media-body">
               <h3 class="heading">Inspiration Talk</h3>
               <p>An engineeing version of TEDx in UCSD hosted by CES. The best way to learn about frontier science and obtain connections with professors.</p>
-              <p><a href=#>Learn More</a></p>
+              <p><a href=#></a></p>
             </div>
           </div>     
         </div>
@@ -84,7 +84,7 @@
             <div class="media-body">
               <h3 class="heading">Grad School Application Roundtables</h3>
               <p>A roundtable dinner party that gathers some of the most intelligent senior UCSD graduates who are about to persue their graduate school degrees.</p>
-              <!-- <p><a href="#Grad School app">Learn More</a></p> -->
+              <p><a href="#Grad School app"></a></p>
             </div>
           </div>  
         </div>
@@ -95,7 +95,7 @@
             <div class="media-body">
               <h3 class="heading">Join us and change the world</h3>
               <p>If you consider yourself as a passionate, ambitous and innovate indivisual who is currently persuing a degress in Science and Engineering, come, join us and let CES redefine your world.</p>
-              <!-- <p><a href="#">Learn More</a></p> -->
+              <p><a href="#"></a></p>
             </div>
           </div> 
         </div>
