Added text hover animation

--- a/public/members.html
+++ b/public/members.html
@@ -660,8 +660,8 @@
           <div class="person-donate text-center bg-light pt-4">
            <!-- <img src="images/person_2.jpg" alt="Image placeholder" class="img-fluid"> -->
             <div class="donate-info">
-              <h2>Yueqian Ma</h2>
-              <span class="time d-block mb-3">Junior | Computer Science</span>
+              <h2 id="easter_egg1">Yueqian Ma</h2>
+              <span class="time d-block mb-3" id="easter_egg2">Junior | Computer Science</span>
 
               <div class="donate-amount d-flex">
                 <div class="label">Member</div>
