--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-7">
-              <h2 class="heading" style = "font-family: 'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, 'sans-serif';">Let the world hear the voice of Chinese Engineers</h2>
+              <h2 class="heading" style = "font-family: 'Gill Sans', 'Gill Sans MT', 'Myriad Pro', 'DejaVu Sans Condensed', Helvetica, Arial, 'sans-serif';">Let the world hear the <text id="easter_egg3">voice </text> of <text id="easter_egg4">Chinese Engineers</text></h2>
             </div>
           </div>
         </div>
