--- a/public/members.html
+++ b/public/members.html
@@ -73,7 +73,7 @@
       <div class="row">
         <div class="col-md-6 col-lg-4 mb-5">
           <div class="person-donate text-center bg-light pt-4">
-<!--            <img src="images/person_1.jpg" alt="Image placeholder" class="img-fluid">-->
+           <!-- <img src="images/person_1.jpg" alt="Image placeholder" class="img-fluid"> -->
             <div class="donate-info">
               <h2>Wanjun Gu</h2>
               <span class="time d-block mb-3">UCSD Senior</span>
@@ -658,7 +658,7 @@
 		 
 		  <div class="col-md-6 col-lg-4 mb-5">
           <div class="person-donate text-center bg-light pt-4">
-           <!-- <img src="images/person_2.jpg" alt="Image placeholder" class="img-fluid"> -->
+           <!-- <img src="images/bg_1.jpg" alt="Image placeholder" class="img-fluid"> -->
             <div class="donate-info">
               <h2 id="easter_egg1">Yueqian Ma</h2>
               <span class="time d-block mb-3" id="easter_egg2">Junior | Computer Science</span>
