Added new member

--- a/public/members.html
+++ b/public/members.html
@@ -671,6 +671,19 @@
           </div>    
         </div>
   
+      <div class="col-md-6 col-lg-4 mb-5">
+        <div class="person-donate text-center bg-light pt-4">
+          <!-- <img src="images/bg_1.jpg" alt="Image placeholder" class="img-fluid"> -->
+          <div class="donate-info">
+            <h2>Rongyu Ma</h2>
+            <span class="time d-block mb-3">Junior | CSE w/spec in Bioinformatics</span>
+            <div class="donate-amount d-flex">
+              <div class="label">Member</div>
+              <div class="amount">Media</div>
+            </div>
+          </div>
+        </div>    
+      </div>
         
       </div>
     </div>
